--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "serverdb": "json-server --watch db.json"
+    "serverdb": "json-server --watch db.json -p 3333 --routes routes.json"
   },
   "eslintConfig": {
     "extends": [
