--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-api-tsvo",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://gitname.github.io/api-github-01/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
