--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-api-tsvo",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/api-github-01/",
+  "homepage": "https://tiagosvo.github.io/api-github-01/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "echo 'https://gitname.github.io/api-github-01' > ./build/CNAME && gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "serverdb": "json-server --watch db.json -p 3333 --routes routes.json --id login"
   },
   "eslintConfig": {
